<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

   <!-- <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.8</version>
        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;
    </parent>-->

    <groupId>co.antonis.generator</groupId>
    <artifactId>generator-gson</artifactId>
    <version>1.snap</version>
    <packaging>jar</packaging>

    <name>co.antonis.generator.gson.gwt</name>
    <url>http://maven.apache.org</url>

    <properties>
        <!--<maven.compiler.release>11</maven.compiler.release>-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <!-- GWT (used the plugin to copy resources)-->
        <version.gwt>2.10.0</version.gwt>
        <version.gwt.style>OBF</version.gwt.style>
        <version.plugin.gwt>2.9.0</version.plugin.gwt>
    </properties>

    <dependencies>

        <!-- for code generator-->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.9.0</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.1-jre</version>
        </dependency>

        <dependency>
            <groupId>com.squareup</groupId>
            <artifactId>javapoet</artifactId>
            <version>1.10.0</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
        <!-- end -->

       <!-- <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>-->
    </dependencies>

    <build>
        <!-- Generate compiled stuff in the folder used for developing mode -->
        <plugins>

            <!-- GWT Maven Plugin (just copy the *.java and gwt.xml resources to the generated jar -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${version.plugin.gwt}</version>
                <executions>
                    <execution>
                        <goals>
                            <!-- Just copy the resources .. -->
                            <goal>resources</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <style>${version.gwt.style}</style>
                </configuration>
            </plugin>

            <!--<plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>-->

            <!-- because of the "Recompile with -Xlint:deprecation for details". -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <!-- <source>1.8</source>
                     <target>1.8</target>
                     <testSource>1.8</testSource>
                     <testTarget>1.8</testTarget>-->
                    <compilerArgument>-Xlint:unchecked</compilerArgument>
                </configuration>
            </plugin>

        </plugins>

    </build>
</project>
